Pipeline/javax_xml_bind_helpers/javax_xml_bind_helpersOutputResult.txt
Sample: DefaultValidationEventHandler_1
----------------------------------------------------------------
output:
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:1: error: package javax.xml.bind does not exist
import javax.xml.bind.ValidationEvent;
                     ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:2: error: package javax.xml.bind.helpers does not exist
import javax.xml.bind.helpers.DefaultValidationEventHandler;
                             ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:6: error: cannot find symbol
        DefaultValidationEventHandler handler = new DefaultValidationEventHandler();
        ^
  symbol:   class DefaultValidationEventHandler
  location: class DefaultValidationEventHandler_1
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:6: error: cannot find symbol
        DefaultValidationEventHandler handler = new DefaultValidationEventHandler();
                                                    ^
  symbol:   class DefaultValidationEventHandler
  location: class DefaultValidationEventHandler_1
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:7: error: cannot find symbol
        ValidationEvent event = new ValidationEvent() {
        ^
  symbol:   class ValidationEvent
  location: class DefaultValidationEventHandler_1
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:7: error: cannot find symbol
        ValidationEvent event = new ValidationEvent() {
                                    ^
  symbol:   class ValidationEvent
  location: class DefaultValidationEventHandler_1
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:9: error: cannot find symbol
            public ValidationEventLocator getLocator() {
                   ^
  symbol: class ValidationEventLocator
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:24: error: cannot find symbol
            public Source getLocatorSource() {
                   ^
  symbol: class Source
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:8: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:13: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:18: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:23: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:28: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:33: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:38: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:43: error: method does not override or implement a method from a supertype
            @Override
            ^
./javax_xml_bind_helpers/javaFiles/DefaultValidationEventHandler_1.java:48: error: method does not override or implement a method from a supertype
            @Override
            ^
17 errors


================================================================

